--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "bootstrap": "^5.1.3",
     "devextreme-angular": "^21.2.8",
     "devextreme-aspnet-data-nojquery": "^2.8.6",
     "rxjs": "~7.5.0",
